# stock-research-tool

./: .gitignore  PRD.md  README.md  main.py  pyproject.toml  requirements.txt  run.py
docs/: index.html
docs/stocks/: aero.html  ci.html  cprx.html
src/: build_site.py  config.py  dossier.py  models.py  screen.py  sentiment.py  summarize.py  survey.py
templates/: dossier.html  index.html
