[project]
name = "stock-research-tool"
version = "0.1.0"
description = "Personal stock research pipeline: screen → survey smart money → timing → buy case"
requires-python = ">=3.12"
dependencies = [
    "yfinance>=0.2.30",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "jinja2>=3.1",
    "lxml>=5.0",
]
